--- a/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
+++ b/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
@@ -31,13 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   google_nav_bar: ^5.0.7
-  table_calendar:
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.11.1
   get: ^4.6.6
-  flutter_datetime_picker: ^1.5.1
-  flutter_local_notifications:
+
+  flutter_local_notifications: ^18.0.1
+ 
+
   timezone: ^0.9.0
 
 
