--- a/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
+++ b/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.11.1
   get: ^4.6.6
-
   flutter_local_notifications: ^18.0.1
+  permission_handler: ^10.0.0
+  shared_preferences: ^2.1.0
  
 
   timezone: ^0.9.0
