--- a/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
+++ b/2325681_2325680_2325682_application_code/gymapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   permission_handler: ^10.0.0
   shared_preferences: ^2.1.0
+  table_calendar:
  
 
   timezone: ^0.9.0
