--- a/2325681_2325680_2325682_application_code/gymapp/android/app/build.gradle
+++ b/2325681_2325680_2325682_application_code/gymapp/android/app/build.gradle
@@ -4,12 +4,10 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
     id 'com.google.gms.google-services'
-
 }
-apply plugin: 'com.google.gms.google-services'
 android {
     namespace = "com.example.gymapp"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -26,7 +24,7 @@ android {
         applicationId = "com.example.gymapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 23
+        minSdkVersion 23  
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
